# programming-data-science-cookbook

./: .gitignore  README.md  pyproject.toml
notebooks/00_hello_world/: hello_world.ipynb
notebooks/01_basic_data_structures/: basic_data_structures.ipynb
notebooks/01_basic_data_structures/exercises/: exercises.ipynb  solutions.ipynb
notebooks/02_flow_control/: flow_control.ipynb
notebooks/02_flow_control/exercises/: exercises.ipynb  solutions.ipynb
notebooks/03_functions_and_oop/: functions_objects_methods.ipynb
notebooks/03_functions_and_oop/exercises/: exercises.ipynb  solutions.ipynb
notebooks/04_pandas_intro/: mtcars.csv  pandas_intro.ipynb
notebooks/04_pandas_intro/exercises/: banks.csv  customer.csv  exercises.ipynb  solutions.ipynb
notebooks/05_pandas_basic_data_manipulation/: pandas_basic_data_manipulation.ipynb
notebooks/05_pandas_basic_data_manipulation/data/: mall-data.csv  mall-data.json  mall-data.txt  mall-data.xlsx
notebooks/06_pandas_advanced_data_manipulation/: pandas_advanced_data_manipulation.ipynb
notebooks/07_data_viz/: data_viz.ipynb
notebooks/08_advanced_topics/: work_in_progress.ipynb
