[tool.poetry]
name = "programming-data-science-cookbook"
version = "0.1.0"
description = ""
authors = ["vitormanita <vmanita@outlook.pt>"]
readme = "README.md"
packages = [{include = "programming_data_science_cookbook"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
nltk = "^3.8.1"
openpyxl = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
